[project]
name = "basicalr-experiments"
version = "0.1.0"

[project.dependencies]
torch = ">=2.1.0"
transformers = ">=4.40.0"
datasets = ">=2.18.0"
peft = ">=0.10.0"
bitsandbytes = ">=0.42.0"
wandb = ">=0.16.0"
hydra-core = ">=1.3.2"
optuna = ">=3.6.0"
matplotlib = ">=3.8.0"
seaborn = ">=0.13.0"
pandas = ">=2.2.0"
scikit-learn = ">=1.4.1"
scipy = ">=1.12.0"
numpy = ">=1.26.4"